# jupyter-flashcard

./: .gitignore  README.md  pyproject.toml
jupyter_flashcard/: __init__.py  config.py  db.py  enum.py  main.py  util.py
