[tool.poetry]
name = "jupyter-flashcard"
version = "0.1.1.6"
description = "Create a database of Jupyter Notebooks and convert them into flashcards."
authors = ["patarapolw <patarapolw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
jupyter = "^1.0"
notebook = "^5.7"
sqlalchemy = "^1.2"
psycopg2 = "^2.7"
psycopg2-binary = "^2.7"

[tool.poetry.dev-dependencies]
